--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Szamla
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_docker
+spring.datasource.url=jdbc:postgresql://db:5432/postgres_docker_all
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
